# readability-cli

./: Cargo.toml  LICENSE  README.md  config.example.toml
src/: args.rs  article.rs  config.rs  lib.rs  main.rs  model.rs
tests/: test.rs
