[package]
name = "readablility-cli"
version = "0.5.0"
edition = "2021"
description = "A CLI to fetch a webpage from a URL provided, extract the main content, then convert the HTML to markdown, and dump it to the stdout."

[[bin]]
name = "rdbl"
path = "src/main.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.5.4", features = ["derive"] }

# Convert HTML to markdown
html2md = "0.2.14"

# Extract the main content from HTML
readable-readability = "0.4.0"

# Fetch the webpage
reqwest = { version = "0.12.2", features = ["blocking"] }

# Serialize and deserialize
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = [] }
toml = "0.8.12"

# Configuration directory
xdg = "2.5.2"

# Prompt selection
termimad = "0.29.1"

# Async runtime
tokio = { version = "1.37.0", features = ["full"] }

# OpenAI API client
async-openai = "0.20.0"
futures = "0.3.30"
