[package]
name = "readablility-cli"
version = "0.7.0"
edition = "2021"
description = "A CLI to fetch a webpage from a URL provided, extract the main content, then convert the HTML to markdown, and dump it to the stdout, while optionally summarizing the content with OpenAI."

[[bin]]
name = "rdbl"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0.86"

# Command line argument parsing
clap = { version = "4.5.16", features = ["derive", "wrap_help", "env"] }

# Convert HTML to markdown
html2md = "0.2.14"

# Extract the main content from HTML
readable-readability = "0.4.0"

# Fetch the webpage
reqwest = "0.12.7"

# Serialize and deserialize
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"

# Configuration directory
xdg = "2.5.2"

# Prompt selection
termimad = "0.30.0"

# Async runtime
tokio = { version = "1.39.3", features = ["full"] }

# OpenAI API client
async-openai = "0.23.4"

[profile.dev]
debug = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
