[package]
name = "readablility-cli"
version = "0.9.0"
edition = "2021"
description = "A CLI to fetch a webpage from a URL provided, extract the main content, then convert the HTML to markdown, and dump it to the stdout."

[[bin]]
name = "rdbl"
path = "src/main.rs"

[lib]
name = "readablility_cli"
path = "src/lib.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.5.40", features = ["derive", "wrap_help", "env"] }

# Convert HTML to markdown
html2md = "0.2.15"

# Fetch the webpage
reqwest = "0.12.20"
article_scraper = "2.1.2"

# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"

[profile.dev]
debug = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
